assignment1/target/main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'number'", "'bool'", 
                     "'string'", "'return'", "'var'", "'dynamic'", "'func'", 
                     "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'while'", 
                     "'not'", "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'<-'", "'...'", "'=='", "'('", "')'", "'['", "']'", 
                     "','", "<INVALID>", "<INVALID>", "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "NUMBER", "BOOLEAN", 
                      "STRING", "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", 
                      "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "WHILE", "NOT", "AND", "OR", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "EQUAL", "NEQ", 
                      "LESS", "GREATER", "LEQ", "GEQ", "ASSIGN", "CONCAT", 
                      "EQUAL_STRING", "OPEN_ROUND_BRACKET", "CLOSE_ROUND_BRACKET", 
                      "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "COMMA", 
                      "IDENTIFIER", "NUMBER_LITERAL", "STRING_LITERAL", 
                      "NEWLINE", "COMMENT", "WHITE_SPACE", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_variable_decl = 2
    RULE_var = 3
    RULE_dynamic = 4
    RULE_normal_type = 5
    RULE_type_list = 6
    RULE_array_type = 7
    RULE_array_variable_decl = 8
    RULE_size = 9
    RULE_array_literal = 10
    RULE_array_elements = 11
    RULE_one_element = 12
    RULE_multiple_elements = 13
    RULE_array_rhs = 14
    RULE_parameter_list = 15
    RULE_parameter_prime = 16
    RULE_parameter = 17
    RULE_nullable_vardecl_expr = 18
    RULE_atleast_newline = 19
    RULE_nullable_newline = 20
    RULE_function_decl = 21
    RULE_function_body = 22
    RULE_statement = 23
    RULE_variable_decl_stmt = 24
    RULE_assignment_stmt = 25
    RULE_assignment_type = 26
    RULE_if_stmt = 27
    RULE_if_part = 28
    RULE_elif_list = 29
    RULE_elif_part = 30
    RULE_else_list = 31
    RULE_else_part = 32
    RULE_for_stmt = 33
    RULE_break_stmt = 34
    RULE_continue_stmt = 35
    RULE_return_stmt = 36
    RULE_function_call_stmt = 37
    RULE_block_stmt = 38
    RULE_block_body = 39
    RULE_expression_list = 40
    RULE_expression_prime = 41
    RULE_expression = 42
    RULE_expression2 = 43
    RULE_expression3 = 44
    RULE_expression4 = 45
    RULE_expression5 = 46
    RULE_expression6 = 47
    RULE_expression7 = 48
    RULE_expression8 = 49
    RULE_expression9 = 50
    RULE_relational_sign = 51
    RULE_index_operators_expr = 52
    RULE_index_operators = 53
    RULE_sub_expr = 54

    ruleNames =  [ "program", "declaration", "variable_decl", "var", "dynamic", 
                   "normal_type", "type_list", "array_type", "array_variable_decl", 
                   "size", "array_literal", "array_elements", "one_element", 
                   "multiple_elements", "array_rhs", "parameter_list", "parameter_prime", 
                   "parameter", "nullable_vardecl_expr", "atleast_newline", 
                   "nullable_newline", "function_decl", "function_body", 
                   "statement", "variable_decl_stmt", "assignment_stmt", 
                   "assignment_type", "if_stmt", "if_part", "elif_list", 
                   "elif_part", "else_list", "else_part", "for_stmt", "break_stmt", 
                   "continue_stmt", "return_stmt", "function_call_stmt", 
                   "block_stmt", "block_body", "expression_list", "expression_prime", 
                   "expression", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7", "expression8", 
                   "expression9", "relational_sign", "index_operators_expr", 
                   "index_operators", "sub_expr" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    NUMBER=3
    BOOLEAN=4
    STRING=5
    RETURN=6
    VAR=7
    DYNAMIC=8
    FUNC=9
    FOR=10
    UNTIL=11
    BY=12
    BREAK=13
    CONTINUE=14
    IF=15
    ELSE=16
    ELIF=17
    BEGIN=18
    END=19
    WHILE=20
    NOT=21
    AND=22
    OR=23
    PLUS=24
    MINUS=25
    MUL=26
    DIV=27
    MOD=28
    EQUAL=29
    NEQ=30
    LESS=31
    GREATER=32
    LEQ=33
    GEQ=34
    ASSIGN=35
    CONCAT=36
    EQUAL_STRING=37
    OPEN_ROUND_BRACKET=38
    CLOSE_ROUND_BRACKET=39
    OPEN_SQUARE_BRACKET=40
    CLOSE_SQUARE_BRACKET=41
    COMMA=42
    IDENTIFIER=43
    NUMBER_LITERAL=44
    STRING_LITERAL=45
    NEWLINE=46
    COMMENT=47
    WHITE_SPACE=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ZCodeParser.NEWLINE]:
                    self.state = 110
                    self.match(ZCodeParser.NEWLINE)
                    pass
                elif token in [ZCodeParser.NUMBER, ZCodeParser.BOOLEAN, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FUNC]:
                    self.state = 111
                    self.declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 114 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBER) | (1 << ZCodeParser.BOOLEAN) | (1 << ZCodeParser.STRING) | (1 << ZCodeParser.VAR) | (1 << ZCodeParser.DYNAMIC) | (1 << ZCodeParser.FUNC) | (1 << ZCodeParser.NEWLINE))) != 0)):
                    break

            self.state = 116
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Variable_declContext,0)


        def function_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Function_declContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ZCodeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.BOOLEAN, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.variable_decl()
                pass
            elif token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.function_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atleast_newline(self):
            return self.getTypedRuleContext(ZCodeParser.Atleast_newlineContext,0)


        def var(self):
            return self.getTypedRuleContext(ZCodeParser.VarContext,0)


        def dynamic(self):
            return self.getTypedRuleContext(ZCodeParser.DynamicContext,0)


        def normal_type(self):
            return self.getTypedRuleContext(ZCodeParser.Normal_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(ZCodeParser.Array_typeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_variable_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decl" ):
                return visitor.visitVariable_decl(self)
            else:
                return visitor.visitChildren(self)




    def variable_decl(self):

        localctx = ZCodeParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 122
                self.var()
                pass

            elif la_ == 2:
                self.state = 123
                self.dynamic()
                pass

            elif la_ == 3:
                self.state = 124
                self.normal_type()
                pass

            elif la_ == 4:
                self.state = 125
                self.array_type()
                pass


            self.state = 128
            self.atleast_newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ZCodeParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = ZCodeParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(ZCodeParser.VAR)
            self.state = 131
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 132
            self.match(ZCodeParser.ASSIGN)
            self.state = 133
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DynamicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def nullable_vardecl_expr(self):
            return self.getTypedRuleContext(ZCodeParser.Nullable_vardecl_exprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dynamic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDynamic" ):
                return visitor.visitDynamic(self)
            else:
                return visitor.visitChildren(self)




    def dynamic(self):

        localctx = ZCodeParser.DynamicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dynamic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(ZCodeParser.DYNAMIC)
            self.state = 136
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 137
            self.nullable_vardecl_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_list(self):
            return self.getTypedRuleContext(ZCodeParser.Type_listContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def nullable_vardecl_expr(self):
            return self.getTypedRuleContext(ZCodeParser.Nullable_vardecl_exprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_normal_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal_type" ):
                return visitor.visitNormal_type(self)
            else:
                return visitor.visitChildren(self)




    def normal_type(self):

        localctx = ZCodeParser.Normal_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_normal_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.type_list()
            self.state = 140
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 141
            self.nullable_vardecl_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ZCodeParser.NUMBER, 0)

        def BOOLEAN(self):
            return self.getToken(ZCodeParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(ZCodeParser.STRING, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_type_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_list" ):
                return visitor.visitType_list(self)
            else:
                return visitor.visitChildren(self)




    def type_list(self):

        localctx = ZCodeParser.Type_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBER) | (1 << ZCodeParser.BOOLEAN) | (1 << ZCodeParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_list(self):
            return self.getTypedRuleContext(ZCodeParser.Type_listContext,0)


        def array_variable_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Array_variable_declContext,0)


        def array_rhs(self):
            return self.getTypedRuleContext(ZCodeParser.Array_rhsContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = ZCodeParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.type_list()
            self.state = 146
            self.array_variable_decl()
            self.state = 147
            self.array_rhs()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_variable_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def OPEN_SQUARE_BRACKET(self):
            return self.getToken(ZCodeParser.OPEN_SQUARE_BRACKET, 0)

        def size(self):
            return self.getTypedRuleContext(ZCodeParser.SizeContext,0)


        def CLOSE_SQUARE_BRACKET(self):
            return self.getToken(ZCodeParser.CLOSE_SQUARE_BRACKET, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_array_variable_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_variable_decl" ):
                return visitor.visitArray_variable_decl(self)
            else:
                return visitor.visitChildren(self)




    def array_variable_decl(self):

        localctx = ZCodeParser.Array_variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_variable_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 150
            self.match(ZCodeParser.OPEN_SQUARE_BRACKET)
            self.state = 151
            self.size()
            self.state = 152
            self.match(ZCodeParser.CLOSE_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER_LITERAL(self):
            return self.getToken(ZCodeParser.NUMBER_LITERAL, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def size(self):
            return self.getTypedRuleContext(ZCodeParser.SizeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_size

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSize" ):
                return visitor.visitSize(self)
            else:
                return visitor.visitChildren(self)




    def size(self):

        localctx = ZCodeParser.SizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_size)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(ZCodeParser.NUMBER_LITERAL)
                self.state = 155
                self.match(ZCodeParser.COMMA)
                self.state = 156
                self.size()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(ZCodeParser.NUMBER_LITERAL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_SQUARE_BRACKET(self):
            return self.getToken(ZCodeParser.OPEN_SQUARE_BRACKET, 0)

        def array_elements(self):
            return self.getTypedRuleContext(ZCodeParser.Array_elementsContext,0)


        def CLOSE_SQUARE_BRACKET(self):
            return self.getToken(ZCodeParser.CLOSE_SQUARE_BRACKET, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_array_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_literal" ):
                return visitor.visitArray_literal(self)
            else:
                return visitor.visitChildren(self)




    def array_literal(self):

        localctx = ZCodeParser.Array_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(ZCodeParser.OPEN_SQUARE_BRACKET)
            self.state = 161
            self.array_elements()
            self.state = 162
            self.match(ZCodeParser.CLOSE_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_elementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_element(self):
            return self.getTypedRuleContext(ZCodeParser.One_elementContext,0)


        def multiple_elements(self):
            return self.getTypedRuleContext(ZCodeParser.Multiple_elementsContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_array_elements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_elements" ):
                return visitor.visitArray_elements(self)
            else:
                return visitor.visitChildren(self)




    def array_elements(self):

        localctx = ZCodeParser.Array_elementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array_elements)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.one_element()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.multiple_elements()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def one_element(self):
            return self.getTypedRuleContext(ZCodeParser.One_elementContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_one_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOne_element" ):
                return visitor.visitOne_element(self)
            else:
                return visitor.visitChildren(self)




    def one_element(self):

        localctx = ZCodeParser.One_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_one_element)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.expression()
                self.state = 169
                self.match(ZCodeParser.COMMA)
                self.state = 170
                self.one_element()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiple_elementsContext(ParserRuleContext):
        __slots__ = 'parser'
